[package]
name = "librstab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
geo-clipper = "0.7.3"
geo-types = "0.7.4"
kurbo = "0.8.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"

